--- a/HRV_analysis1_update.Rmd
+++ b/HRV_analysis1_update.Rmd
@@ -14,6 +14,7 @@ knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning=FALSE)
 library(RMySQL)
 library(tidyverse)
 library(lubridate)
+library(robustbase)
 library(stringr)
 ```
 
@@ -76,7 +77,7 @@ filter_time_day1_mb <- user19_l_mb %>%
 ```{r}
 # Standardize function, standard deviation based on median absolute deviation, a robust estimate of standard deviation
 standardize <- function(rr){
-  return ((rr-mean(rr))/mad(rr))
+  return ((rr-mean(rr))/sqrt(covMcd(rr)$cov[1])) # use more robust function
 }
 
 # Function to identify outlier
@@ -89,7 +90,7 @@ outlier_short <- function(rr){
 # Function to remove outlier, then add to subsequent beat
 rm_short <- function(x,y){ # x is the index of outliers, y is the column of rr-interval
   for (i in 1:length(x)){
-    if (y[x[i]]<length(y)){
+    if (x[i]<length(y)){
       y[x[i]+1] <- y[x[i]+1] + y[x[i]]
       y[x[i]] <- NA
     }
@@ -108,40 +109,38 @@ rm_short_comp <- function (rr){
 }
 ```
 
-## Impute long rr-interval (Still working to optimize function)
-
+## Impute long rr-interval, applied after removing short
 ```{r}
-# Identiy long rr-interval
 impute_long <- function(rr){
-  dmax <- (2*mad(rr)) + mean(rr)
+  dmax <- (2*sqrt(covMcd(rr)$cov[1])) + mean(rr) # For imputation
   dp <- numeric()
   dp1 <- numeric()
   ind_long <- which(rr>dmax)
-  for (i in 1:length(ind_long)){
+  for (i in 1:length(ind_long)){     # imputation if rr>dmax
     dp <- sum((rr[ind_long][i]-dmax), dp)
   }
-  dp <- dp/length(ind_long)
-  rr[ind_long][i] <- rr[ind_long][i]-dp
+  dp <- dp/length(ind_long)          # imputation if rr<=dmax
+  rr[ind_long] <- rr[ind_long]-dp
   for (i in 1:length(rr[-ind_long])){
     dp1 <- sum((rr[-ind_long][i]-dmax), dp1)
   }
   dp1 <- dp1/length(rr[-ind_long])
-  rr[-ind_long][i] <- rr[-ind_long][i]-dp1
+  rr[-ind_long] <- rr[-ind_long]-dp1
   return (rr)
 }
-
-
 ```
 
 
 **E4**
 ```{r}
 filter_time_day1_e4.clean <- filter_time_day1_e4 %>%
-  mutate(e4_rr=rm_short_comp(e4_rr))
+  mutate(e4_rr=rm_short_comp(e4_rr)) %>%
+  filter(!is.na(e4_rr)) %>%
+  mutate(e4_rr=impute_long(e4_rr))
 
 # Plot
 ggplot(filter_time_day1_e4.clean, aes(x=readable_timestamp, y=e4_rr)) + geom_line() +
-  ggtitle("Plot of rr-interval against time, after removing outliers, measured by E4 \non the left hand, during the first day of study, 2016-11- 15, for participant 19.") +
+  ggtitle("Plot of rr-interval against time, after removing outliers, \nmeasured by E4 on the left hand, \non first day of study, 2016-11- 15, for participant 19.") +
   ylab("RR interval in milliseconds") + 
   xlab("time")
 ```
@@ -150,23 +149,28 @@ ggplot(filter_time_day1_e4.clean, aes(x=readable_timestamp, y=e4_rr)) + geom_lin
 
 ```{r}
 filter_time_day1_fb.clean <- filter_time_day1_fb %>%
-  mutate(fb_rr=rm_short_comp(fb_rr))
+  mutate(fb_rr=rm_short_comp(fb_rr)) %>%
+  filter(!is.na(fb_rr)) %>%
+  mutate(fb_rr=impute_long(fb_rr))
 
 # Plot
 ggplot(filter_time_day1_fb.clean, aes(x=readable_timestamp, y=fb_rr)) + geom_line() +
-  ggtitle("Plot of rr-interval against time, after removing outliers, measured by ECG \nduring the first day of study, 2016-11- 15, for participant 19.") +
+  ggtitle("Plot of rr-interval against time, after removing outliers, \nmeasured by ECG during the first day of study, \n2016-11- 15, for participant 19.") +
   ylab("RR interval in milliseconds") + 
   xlab("time")
 ```
+
 **MSband**
 
 ```{r}
 filter_time_day1_mb.clean <- filter_time_day1_mb %>%
-  mutate(mb_rr=rm_short_comp(mb_rr))
+  mutate(mb_rr=rm_short_comp(mb_rr)) %>%
+  filter(!is.na(mb_rr)) %>%
+  mutate(mb_rr=impute_long(mb_rr))
 
 # Plot
 ggplot(filter_time_day1_mb.clean, aes(x=readable_timestamp, y=mb_rr)) + geom_line() +
-  ggtitle("Plot of rr-interval against time, after removing outliers, measured by MSband \non the left hand during the first day of study, 2016-11- 15, for participant 19.") +
+  ggtitle("Plot of rr-interval against time, after removing outliers, \nmeasured by MSband on the left hand, \non first day of study, 2016-11- 15, for participant 19.") +
   ylab("RR interval in milliseconds") + 
   xlab("time")
 ```
@@ -222,18 +226,18 @@ clr <- c("blue", "green", "purple", "red", "black", "purple", "blue", "green", "
 ggplot(hrv_df, aes(x=Event, y=RMSSD)) +
   geom_path(aes(group=Device)) +
   geom_point(aes(colour=Event)) +
-  #facet_wrap(~Device) +
-  #coord_flip() + 
+  facet_wrap(~Device) +
   scale_colour_manual(values=clr, 
                       labels=paste(hrv_df$Event,hrv_df$Activity, sep=":"),
                       name=NULL) +
-  annotate(geom="text", x=1, y=50, label="E4") +
-  annotate(geom="text", x=1, y=30, label="ECG") +
-  annotate(geom="text", x=1, y=100, label="MSB") +
+  #annotate(geom="text", x=1, y=50, label="E4") +
+  #annotate(geom="text", x=1, y=30, label="ECG") +
+  #annotate(geom="text", x=1, y=100, label="MSB") +
   ggtitle("Plot of RMSSD across events for each device") +
   ylab("RMSSD in milliseconds") +
   theme(legend.position="top", 
-        legend.text=element_text(size=7)) 
+        legend.text=element_text(size=7),
+        axis.text.x = element_text(angle = 90, hjust = 1)) 
 ```
 
 # Plot HRV across time window of 3min + 30s each, for E4. Working on function to increment by 30s. 
